--- a/Objects/STM32_Libs.build_log.htm
+++ b/Objects/STM32_Libs.build_log.htm
@@ -26,36 +26,36 @@ Project File Date:  05/14/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'Application'
-compiling list.c...
-compiling event_groups.c...
-compiling heap_4.c...
-compiling main.cpp...
+Rebuild target 'App'
 compiling croutine.c...
-compiling stream_buffer.c...
+compiling list.c...
 compiling queue.c...
+compiling event_groups.c...
+compiling stream_buffer.c...
+compiling main.cpp...
+compiling heap_4.c...
 compiling tasks.c...
-compiling common.cpp...
-compiling port.c...
 compiling timers.c...
+compiling port.c...
 compiling analog_monitor.cpp...
-compiling led_task.cpp...
+compiling common.cpp...
 compiling init.cpp...
+compiling led_task.cpp...
 compiling test_task.cpp...
 compiling pidTask.cpp...
+compiling custom_timer.cpp...
+compiling pid.cpp...
+compiling simple_input.cpp...
 compiling analog_out.cpp...
 compiling coil.cpp...
 compiling three_pos.cpp...
-compiling simple_input.cpp...
 compiling gpio_common.cpp...
-compiling pid.cpp...
-compiling custom_timer.cpp...
 compiling ramp.cpp...
 compiling two_pos.cpp...
+assembling startup_stm32f10x_md.s...
 compiling monitor.cpp...
 compiling system_stm32f10x.c...
 compiling moving_avg.cpp...
-assembling startup_stm32f10x_md.s...
 linking...
 Program Size: Code=20950 RO-data=542 RW-data=48 ZI-data=15176  
 ".\Objects\STM32_Libs.axf" - 0 Error(s), 0 Warning(s).
@@ -76,7 +76,7 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   ./RTE/Device/STM32F103C8
-  ./RTE/_Application
+  ./RTE/_App
   C:/Users/VNT/AppData/Local/Arm/Packs/ARM/CMSIS/6.0.0/CMSIS/Core/Include
   C:/Users/VNT/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.1/Device/Include
 
