--- a/Objects/STM32_Libs.build_log.htm
+++ b/Objects/STM32_Libs.build_log.htm
@@ -27,37 +27,38 @@ Project File Date:  05/14/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'App'
-compiling croutine.c...
 compiling list.c...
-compiling queue.c...
-compiling event_groups.c...
-compiling stream_buffer.c...
-compiling main.cpp...
 compiling heap_4.c...
+compiling event_groups.c...
+compiling croutine.c...
+compiling stream_buffer.c...
+compiling queue.c...
+compiling main.cpp...
 compiling tasks.c...
 compiling timers.c...
+compiling common.cpp...
 compiling port.c...
 compiling analog_monitor.cpp...
-compiling common.cpp...
-compiling init.cpp...
-compiling led_task.cpp...
 compiling test_task.cpp...
 compiling pidTask.cpp...
-compiling custom_timer.cpp...
-compiling pid.cpp...
-compiling simple_input.cpp...
+compiling init.cpp...
+compiling led_task.cpp...
 compiling analog_out.cpp...
 compiling coil.cpp...
-compiling three_pos.cpp...
+compiling switch_delay.cpp...
+compiling pid.cpp...
 compiling gpio_common.cpp...
 compiling ramp.cpp...
-compiling two_pos.cpp...
-assembling startup_stm32f10x_md.s...
-compiling monitor.cpp...
+compiling simple_input.cpp...
+compiling common_timer.cpp...
+compiling three_pos.cpp...
 compiling system_stm32f10x.c...
 compiling moving_avg.cpp...
+compiling monitor.cpp...
+compiling two_pos.cpp...
+assembling startup_stm32f10x_md.s...
 linking...
-Program Size: Code=20950 RO-data=542 RW-data=48 ZI-data=15176  
+Program Size: Code=21478 RO-data=574 RW-data=64 ZI-data=15192  
 ".\Objects\STM32_Libs.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -85,10 +86,10 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:6.0.0
 
    * Component: Keil::Device:Startup:1.0.0
+      Include file:  RTE_Driver/Config/RTE_Device.h
       Source file:   Device/Source/ARM/startup_stm32f10x_md.s
       Source file:   Device/Source/system_stm32f10x.c
       Source file:   Device/Source/ARM/STM32F1xx_OPT.s
-      Include file:  RTE_Driver/Config/RTE_Device.h
 Build Time Elapsed:  00:00:02
 </pre>
 </body>
