--- a/Objects/STM32_Libs.build_log.htm
+++ b/Objects/STM32_Libs.build_log.htm
@@ -22,47 +22,48 @@ Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
 D:\GitProjects\STM32_Libs\STM32_Libs.uvprojx
-Project File Date:  05/15/2024
+Project File Date:  05/16/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'App'
 compiling croutine.c...
-compiling list.c...
 compiling heap_4.c...
-compiling stream_buffer.c...
 compiling event_groups.c...
-compiling queue.c...
+compiling list.c...
 compiling main.cpp...
+compiling queue.c...
+compiling stream_buffer.c...
 compiling tasks.c...
-compiling port.c...
 compiling timers.c...
+compiling port.c...
+compiling test_task.cpp...
+compiling init.cpp...
 compiling common.cpp...
 compiling led_task.cpp...
 compiling pidTask.cpp...
 compiling analog_monitor.cpp...
-compiling test_task.cpp...
-compiling init.cpp...
 compiling analog_out.cpp...
-compiling rf_impulse.cpp...
-compiling coil.cpp...
 compiling gpio_common.cpp...
-compiling switch_delay.cpp...
 compiling on_delay.cpp...
+compiling rf_impulse.cpp...
 compiling simple_input.cpp...
+compiling switch_delay.cpp...
+compiling coil.cpp...
 compiling common_timer.cpp...
 compiling off_delay.cpp...
-compiling ramp.cpp...
-compiling two_pos.cpp...
-compiling pid.cpp...
 compiling pulse.cpp...
-compiling three_pos.cpp...
+compiling pid.cpp...
+compiling ramp.cpp...
 compiling monitor.cpp...
+compiling counter.cpp...
+compiling three_pos.cpp...
+compiling two_pos.cpp...
 compiling moving_avg.cpp...
-compiling system_stm32f10x.c...
 assembling startup_stm32f10x_md.s...
+compiling system_stm32f10x.c...
 linking...
-Program Size: Code=22538 RO-data=614 RW-data=76 ZI-data=15236  
+Program Size: Code=22610 RO-data=654 RW-data=76 ZI-data=15252  
 ".\Objects\STM32_Libs.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -94,7 +95,7 @@ Package Vendor: Keil
       Source file:   Device/Source/system_stm32f10x.c
       Include file:  RTE_Driver/Config/RTE_Device.h
       Source file:   Device/Source/ARM/STM32F1xx_OPT.s
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
