--- a/Objects/STM32_Libs.build_log.htm
+++ b/Objects/STM32_Libs.build_log.htm
@@ -27,43 +27,44 @@ Project File Date:  05/16/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'App'
-compiling croutine.c...
-compiling heap_4.c...
-compiling event_groups.c...
 compiling list.c...
+compiling event_groups.c...
+compiling heap_4.c...
+compiling stream_buffer.c...
+compiling croutine.c...
 compiling main.cpp...
 compiling queue.c...
-compiling stream_buffer.c...
 compiling tasks.c...
-compiling timers.c...
 compiling port.c...
-compiling test_task.cpp...
-compiling init.cpp...
+compiling timers.c...
 compiling common.cpp...
-compiling led_task.cpp...
 compiling pidTask.cpp...
+compiling init.cpp...
 compiling analog_monitor.cpp...
+compiling test_task.cpp...
+compiling led_task.cpp...
 compiling analog_out.cpp...
-compiling gpio_common.cpp...
-compiling on_delay.cpp...
-compiling rf_impulse.cpp...
-compiling simple_input.cpp...
 compiling switch_delay.cpp...
 compiling coil.cpp...
+compiling simple_input.cpp...
+compiling on_delay.cpp...
+compiling rf_impulse.cpp...
+compiling gpio_common.cpp...
 compiling common_timer.cpp...
 compiling off_delay.cpp...
+compiling sequence.cpp...
 compiling pulse.cpp...
-compiling pid.cpp...
 compiling ramp.cpp...
-compiling monitor.cpp...
-compiling counter.cpp...
 compiling three_pos.cpp...
 compiling two_pos.cpp...
+compiling pid.cpp...
+compiling monitor.cpp...
+compiling counter.cpp...
 compiling moving_avg.cpp...
 assembling startup_stm32f10x_md.s...
 compiling system_stm32f10x.c...
 linking...
-Program Size: Code=22610 RO-data=654 RW-data=76 ZI-data=15252  
+Program Size: Code=21946 RO-data=634 RW-data=56 ZI-data=15208  
 ".\Objects\STM32_Libs.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -95,7 +96,7 @@ Package Vendor: Keil
       Source file:   Device/Source/system_stm32f10x.c
       Include file:  RTE_Driver/Config/RTE_Device.h
       Source file:   Device/Source/ARM/STM32F1xx_OPT.s
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
