--- a/Objects/STM32_Libs.build_log.htm
+++ b/Objects/STM32_Libs.build_log.htm
@@ -26,46 +26,13 @@ Project File Date:  05/21/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'App'
-compiling list.c...
-compiling heap_4.c...
-compiling croutine.c...
-compiling stream_buffer.c...
-compiling event_groups.c...
-compiling main.cpp...
-compiling tasks.c...
-compiling queue.c...
-compiling port.c...
-compiling led_task.cpp...
-compiling timers.c...
-compiling common.cpp...
-compiling analog_monitor.cpp...
-compiling init.cpp...
-compiling pidTask.cpp...
-compiling test_task.cpp...
-compiling analog_out.cpp...
-compiling switch_delay.cpp...
-compiling rf_impulse.cpp...
-compiling simple_input.cpp...
-compiling on_delay.cpp...
-compiling coil.cpp...
-compiling common_timer.cpp...
-compiling gpio_common.cpp...
-compiling pulse.cpp...
-compiling off_delay.cpp...
-compiling ramp.cpp...
-compiling monitor.cpp...
-compiling pid.cpp...
-compiling sequence.cpp...
-compiling three_pos.cpp...
-compiling two_pos.cpp...
-compiling counter.cpp...
-compiling system_stm32f10x.c...
-compiling moving_avg.cpp...
-assembling startup_stm32f10x_md.s...
+Build target 'App'
 linking...
-Program Size: Code=22274 RO-data=746 RW-data=60 ZI-data=15308  
-".\Objects\STM32_Libs.axf" - 0 Error(s), 0 Warning(s).
+.\Objects\STM32_Libs.axf: Error: L6218E: Undefined symbol vtable for PulseInterrapt (referred from pulse.o).
+Not enough information to list image symbols.
+Not enough information to list load addresses in the image map.
+Finished: 2 information, 0 warning and 1 error messages.
+".\Objects\STM32_Libs.axf" - 1 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -96,7 +63,8 @@ Package Vendor: Keil
       Source file:   Device/Source/system_stm32f10x.c
       Include file:  RTE_Driver/Config/RTE_Device.h
       Source file:   Device/Source/ARM/STM32F1xx_OPT.s
-Build Time Elapsed:  00:00:03
+Target not created.
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
