--- a/Objects/STM32_Libs.build_log.htm
+++ b/Objects/STM32_Libs.build_log.htm
@@ -22,17 +22,51 @@ Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
 D:\GitProjects\STM32_Libs\STM32_Libs.uvprojx
-Project File Date:  05/21/2024
+Project File Date:  05/23/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'App'
+Rebuild target 'App'
+compiling croutine.c...
+compiling list.c...
+compiling event_groups.c...
+compiling stream_buffer.c...
+compiling queue.c...
+compiling heap_4.c...
+compiling main.cpp...
+compiling tasks.c...
+compiling port.c...
+compiling common.cpp...
+compiling timers.c...
+compiling analog_monitor.cpp...
+compiling test_task.cpp...
+compiling init.cpp...
+compiling led_task.cpp...
+compiling pidTask.cpp...
+compiling analog_out.cpp...
+compiling switch_delay.cpp...
+compiling common_timer.cpp...
+compiling simple_input.cpp...
+compiling coil.cpp...
+compiling coil_with_timer.cpp...
+compiling rf_impulse.cpp...
+compiling gpio_common.cpp...
+compiling on_delay.cpp...
+compiling off_delay.cpp...
+compiling pulse.cpp...
+compiling two_pos.cpp...
+compiling sequence.cpp...
+compiling three_pos.cpp...
+compiling pid.cpp...
+compiling ramp.cpp...
+compiling monitor.cpp...
+compiling moving_avg.cpp...
+compiling counter.cpp...
+assembling startup_stm32f10x_md.s...
+compiling system_stm32f10x.c...
 linking...
-.\Objects\STM32_Libs.axf: Error: L6218E: Undefined symbol vtable for PulseInterrapt (referred from pulse.o).
-Not enough information to list image symbols.
-Not enough information to list load addresses in the image map.
-Finished: 2 information, 0 warning and 1 error messages.
-".\Objects\STM32_Libs.axf" - 1 Error(s), 0 Warning(s).
+Program Size: Code=22534 RO-data=802 RW-data=64 ZI-data=15312  
+".\Objects\STM32_Libs.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -59,12 +93,11 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:6.0.0
 
    * Component: Keil::Device:Startup:1.0.0
+      Include file:  RTE_Driver/Config/RTE_Device.h
       Source file:   Device/Source/ARM/startup_stm32f10x_md.s
       Source file:   Device/Source/system_stm32f10x.c
-      Include file:  RTE_Driver/Config/RTE_Device.h
       Source file:   Device/Source/ARM/STM32F1xx_OPT.s
-Target not created.
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
